# qwen3-vl-2b-ros2

./: .gitignore  CMakeLists.txt  README.md  VLM_NPU  package.xml
action/: StreamQuery.action
include/qwen3_vl_2b_npu/: RK35llm.h  VlmServerNode.h
src/: RK35llm.cpp  VlmServerNode.cpp  vlm_client.cpp  vlm_server.cpp
srv/: VlmQuery.srv
